# brambles-compiler

./: .gitignore  .gitmodules  README.md  brambles-compiler.cabal  cabal.project  cabal.project.freeze  compiler.cabal
.circleci/: config.yml
.circleci/images/: Containerfile
app/: CLI.hs  Main.hs
app/Brambles/REPL/: CLI.hs  Main.hs
backend/Brambles/: Backend.hs
backend/Brambles/Backend/: ASTToLLVM.hs  Codegen.hs
frontend/Brambles/: Frontend.hs
frontend/Brambles/Frontend/: AST.hs  Lexer.hs  Parser.hs  Pretty.hs  Symbolize.hs  Typecheck.hs
src/: AST.hs  ASTToLLVM.hs  Codegen.hs  LLVM.hs  Lexer.hs  Parser.hs  Pretty.hs  Symbolize.hs  Typecheck.hs
src/Brambles/Frontend/: Typecheck.hs
static/: runtime.c
test/: ASTPrettyPrinting.hs  ASTPrettyUnit.hs  LexerTests.hs  ParserQuick.hs  ParserUnit.hs  Suite.hs  SymbolizerUnit.hs  Util.hs
test/AST/: PrettyUnit.hs
test/Parser/: Gen.hs  Prop.hs  Unit.hs
test/Symbolizer/: Unit.hs
test/Test/Brambles/: Main.hs  Util.hs
test/Test/Brambles/Frontend/AST/: PrettyUnit.hs
test/Test/Brambles/Frontend/Parser/: Gen.hs  Prop.hs  Unit.hs
test/Test/Brambles/Frontend/Symbolizer/: Unit.hs
test/examples/: BlockAssignment.golden  Comment.golden  EmptyBlock.golden  FunctionCall.golden  FunctionCallWithArgs.golden  If.golden  IfAssignment.golden  NestedBlock.golden  While.golden
test/frontend/Test/Brambles/: Main.hs  Util.hs
test/frontend/Test/Brambles/Frontend/AST/: Unit.hs
test/frontend/Test/Brambles/Frontend/Parser/: Gen.hs  Prop.hs  Unit.hs
test/frontend/Test/Brambles/Frontend/Symbolizer/: Unit.hs
