cabal-version:      3.0
name:               brambles-compiler
version:            0.1.0.0

extra-source-files: static/*.c

common brambles-common
    default-language: Haskell2010

    build-depends: 
          base          >=4.16
        , protolude     >=0.3.4

    default-extensions:
          GeneralizedNewtypeDeriving
        , LambdaCase
        , MultiParamTypeClasses
        , FlexibleContexts
        , FlexibleInstances
        , DeriveTraversable
        , ViewPatterns
        , RecordWildCards
        , DataKinds
        , TypeFamilies
        , InstanceSigs
        , ScopedTypeVariables
        , DeriveAnyClass
        , DerivingStrategies
        , DefaultSignatures
        , FunctionalDependencies
        , RankNTypes
        , ConstraintKinds
        , RecursiveDo
        , OverloadedStrings
        , NoImplicitPrelude
        , BangPatterns

    ghc-options:         -Wall

common test-common
    import: brambles-common

    build-depends:
        , tasty
        , tasty-hunit
        , tasty-hedgehog   ^>=1.4.0
        , hedgehog         ^>=1.4


library brambles-frontend
    import: brambles-common

    hs-source-dirs:   frontend

    visibility: public

    exposed-modules: 
          Brambles.Frontend.Parser
        , Brambles.Frontend.AST
        , Brambles.Frontend.Lexer
        , Brambles.Frontend.Pretty
        , Brambles.Frontend.Symbolize
        , Brambles.Frontend.Typecheck
        , Brambles.Frontend

    build-depends:    
          llvm-hs-pure
        , megaparsec         ^>=9.6.1
        , parser-combinators ^>=1.3.0
        , multiplate         ^>=0.0.3
        , prettyprinter      ^>=1.7.1
        , mtl                  ^>=2.3.1
        , containers         ^>=0.6.4


library brambles-backend
    import: brambles-common

    hs-source-dirs:   backend

    visibility: public

    exposed-modules: 
          Brambles.Backend
        , Brambles.Backend.ASTToLLVM
        , Brambles.Backend.Codegen

    build-depends:    
          brambles-frontend
        , llvm-hs
        , llvm-hs-pure
        , directory          ^>=1.3.6
        , unix               ^>=2.7.2
        , process            ^>=1.6.13
        , string-conversions ^>=0.4.0
        , file-embed         ^>=0.0.16
        , containers         ^>=0.6.4
        , mtl                  ^>=2.3.1
        , bytestring         ^>=0.11


test-suite test
    import: test-common

    type: exitcode-stdio-1.0
    main-is: Test/Brambles/Main.hs 

    hs-source-dirs: test/frontend

    other-modules: 
          Test.Brambles.Frontend.AST.Unit
        , Test.Brambles.Frontend.Parser.Unit
        , Test.Brambles.Frontend.Parser.Gen
        , Test.Brambles.Frontend.Parser.Prop
        , Test.Brambles.Frontend.Symbolizer.Unit
        , Test.Brambles.Util

    build-depends:
          brambles-frontend
        , brambles-backend
        , megaparsec       ^>=9.6.1
        , prettyprinter    ^>=1.7.1
        , multiplate       ^>=0.0.3
        , transformers     ^>=0.5.6
        , mtl              ^>=2.3.1
        , tasty-golden     ^>=2.3.5
        , filepath         ^>=1.4.300
        , bytestring         ^>=0.11


executable brambles-repl
    import: brambles-common

    hs-source-dirs:   app
    main-is:          Brambles/REPL/Main.hs

    other-modules: 
        Brambles.REPL.CLI

    build-depends:
          brambles-frontend
        , brambles-backend
        , haskeline            ^>=0.8.2
        , megaparsec           ^>=9.6.1
        , optparse-applicative ^>=0.18.1
        , mtl                  ^>=2.3.1


