cabal-version:      2.4
name:               compiler
version:            0.1.0.0

common compiler-common
    default-language: Haskell2010

    build-depends: 
          base          ^>=4.15.1.0

    default-extensions:
          GeneralizedNewtypeDeriving
        , LambdaCase
        , MultiParamTypeClasses
        , FlexibleContexts
        , FlexibleInstances
        , DeriveTraversable
        , ViewPatterns
        , RecordWildCards

library compiler-lib
    import: compiler-common

    hs-source-dirs:   src
    exposed-modules: 
          Parser
        , AST
        , Lexer
        , Pretty
        , Symbolize
        , LLVM

    build-depends:    
        , parsec        ^>=3.1.17.0
        , prettyprinter ^>=1.7.1
        , containers    ^>=0.6.4.1
        , mtl           ^>=2.2.2
        , multiplate    ^>=0.0.3
        , llvm-hs-pure  ^>=9.0.0
        , text          <=2.0
        , directory     ^>=1.3.6.2
        , llvm-hs-pretty
        , unix          ^>=2.7.2.2
        , process       ^>=1.6.13.2
        , string-conversions ^>=0.4.0.1
        , file-embed ^>=0.0.15.0

    ghc-options:         -Wall

executable compiler
    import: compiler-common

    hs-source-dirs:   app
    main-is:          Main.hs

    build-depends:
          haskeline            ^>=0.8.2.1
        , parsec               ^>=3.1.17.0
        , optparse-applicative ^>=0.18.1.0
        , text                 <=2.0
        , llvm-hs-pretty
        , compiler-lib

common test-common
    import: compiler-common

    hs-source-dirs: test

    build-depends:
          tasty
        , tasty-hunit
        , compiler-lib


test-suite unit-test
    import: test-common
    type: exitcode-stdio-1.0
    main-is: Suite.hs 

    other-modules: 
          AST.PrettyUnit
        , Parser.Unit
        , Parser.Gen
        , Parser.Prop
        , Symbolizer.Unit

    build-depends:
          parsec           ^>=3.1.17.0
        , prettyprinter    ^>=1.7.1
        , tasty-hedgehog   ^>=1.4.0.2
        , hedgehog         ^>=1.4
        , multiplate    ^>=0.0.3

