cabal-version:      2.4
name:               compiler
version:            0.1.0.0
extra-source-files: static/*.c

common compiler-common
    default-language: Haskell2010

    build-depends: 
          base          >=4.16

    default-extensions:
          GeneralizedNewtypeDeriving
        , LambdaCase
        , MultiParamTypeClasses
        , FlexibleContexts
        , FlexibleInstances
        , DeriveTraversable
        , ViewPatterns
        , RecordWildCards
        , DataKinds
        , TypeFamilies
        , InstanceSigs
        , ScopedTypeVariables
        , DeriveAnyClass
        , DerivingStrategies
        , DefaultSignatures
        , FunctionalDependencies
        , RankNTypes
        , ConstraintKinds
        , RecursiveDo

library compiler-lib
    import: compiler-common

    hs-source-dirs:   src
    exposed-modules: 
          Brambles.Frontend.Parser
        , Brambles.Frontend.AST
        , Brambles.Frontend.Lexer
        , Brambles.Frontend.Pretty
        , Brambles.Frontend.Symbolize
        , Brambles.Frontend.Typecheck
        , Brambles.Backend.ASTToLLVM
        , Brambles.Backend.Codegen

    build-depends:    
        , parsec             ^>=3.1.17.0
        , prettyprinter      ^>=1.7.1
        , containers         ^>=0.6.4.1
        , mtl                ^>=2.2.2
        , multiplate         ^>=0.0.3
        , llvm-hs-pure
        , llvm-hs
        , text               <=2.0
        , directory          ^>=1.3.6.2
        , unix               ^>=2.7.2.2
        , process            ^>=1.6.13.2
        , string-conversions ^>=0.4.0.1
        , file-embed         ^>=0.0.16.0
        , bytestring         ^>=0.11

    ghc-options:         -Wall

executable compiler
    import: compiler-common

    hs-source-dirs:   app
    main-is:          Main.hs

    build-depends:
          haskeline            ^>=0.8.2.1
        , parsec               ^>=3.1.17.0
        , optparse-applicative ^>=0.18.1.0
        , text                 <=2.0
        , mtl                  ^>=2.2.2
        , compiler-lib

common test-common
    import: compiler-common

    hs-source-dirs: test

    build-depends:
          tasty
        , tasty-hunit
        , compiler-lib


test-suite unit-test
    import: test-common
    type: exitcode-stdio-1.0
    main-is: Test/Brambles/Main.hs 

    other-modules: 
          Test.Brambles.Frontend.AST.PrettyUnit
        , Test.Brambles.Frontend.Parser.Unit
        , Test.Brambles.Frontend.Parser.Gen
        , Test.Brambles.Frontend.Parser.Prop
        , Test.Brambles.Frontend.Symbolizer.Unit
        , Test.Brambles.Util

    build-depends:
          parsec           ^>=3.1.17.0
        , prettyprinter    ^>=1.7.1
        , tasty-hedgehog   ^>=1.4.0.2
        , hedgehog         ^>=1.4
        , multiplate       ^>=0.0.3
        , transformers     ^>=0.5.6.2

